#3: Specify Readme in .all-contributorsrc

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,4 +1,7 @@
 {
-  "projectName": "BulkRename",
-  "projectOwner": "Ramo-Y"
+  "projectName": "RAY.BulkRename",
+  "projectOwner": "Ramo-Y",
+  "files": [
+    "README.md"
+  ]
 }
