Use cleanup for release and manual release

--- a/.github/workflows/build-test-release-cleanup.yml
+++ b/.github/workflows/build-test-release-cleanup.yml
@@ -30,3 +30,9 @@ jobs:
     secrets: inherit
     with:
       image_version: ${{ needs.test.outputs.image_version }}
+  cleanup:
+    if: always()
+    needs: release
+    uses: ./.github/workflows/cleanup.yml
+    secrets: inherit
+  
