--- a/.github/workflows/build-test-release-cleanup_manually.yml
+++ b/.github/workflows/build-test-release-cleanup_manually.yml
@@ -25,3 +25,8 @@ jobs:
     secrets: inherit
     with:
       image_version: ${{ inputs.image_version }}
+  cleanup:
+    if: always()
+    needs: release
+    uses: ./.github/workflows/cleanup.yml
+    secrets: inherit
