--- a/.github/workflows/build-test-cleanup.yml
+++ b/.github/workflows/build-test-cleanup.yml
@@ -27,3 +27,8 @@ jobs:
     secrets: inherit
     with:
       image_version: ${{ needs.build.outputs.image_version }}
+  cleanup:
+    if: always()
+    needs: test
+    uses: ./.github/workflows/cleanup.yml
+    secrets: inherit
