#23 Set default PersistanceMode to None

--- a/src/BulkRename/appsettings.json
+++ b/src/BulkRename/appsettings.json
@@ -8,5 +8,5 @@
   "AllowedHosts": "*",
   "SupportedFileEndings": "mkv;mp4;m4v;avi",
   "FoldersToIgnore": ".@__thumb",
-  "PersistanceMode": "Database"
+  "PersistanceMode": "None"
 }
