#23 Remove unnecessary settings

--- a/src/BulkRename/appsettings.json
+++ b/src/BulkRename/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "SupportedFileEndings": "mkv;mp4;m4v;avi",
-  "FoldersToIgnore": ".@__thumb",
-  "PersistanceMode": "None"
+  "AllowedHosts": "*"
 }
