Add SupportedFileEndings to development config

--- a/src/BulkRename/appsettings.Development.json
+++ b/src/BulkRename/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SupportedFileEndings": "mkv;mp4;m4v;avi"
 }
