Add PersistanceMode to development config

--- a/src/BulkRename/appsettings.Development.json
+++ b/src/BulkRename/appsettings.Development.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "SupportedFileEndings": "mkv;mp4;m4v;avi"
+  "SupportedFileEndings": "mkv;mp4;m4v;avi",
+  "PersistanceMode": "Database"
 }
