--- a/src/BulkRename.IntegrationTests/BulkRename.IntegrationTests.csproj
+++ b/src/BulkRename.IntegrationTests/BulkRename.IntegrationTests.csproj
@@ -28,106 +28,106 @@
     <None Include="TestResources\.%40__thumb\.gitkeep">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E01.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E01.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E02.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E02.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E03.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E03.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E04.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E04.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E05.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E05.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E06.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E06.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E07.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E07.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E08.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E08.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E09.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E09.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\Dark.S1.E10.German.DL.AAC.1080p.WebDL.x264.mkv">
+    <None Update="TestResources\Dark (2017)\Season 01\Dark.S1.E10.German.DL.AAC.1080p.WebDL.x264.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\Dark\Season 01\ReadMe.md">
+    <None Update="TestResources\Dark (2017)\Season 01\ReadMe.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\rark-grames.svg">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\rark-grames.svg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\ReadMe.md">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\ReadMe.md">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e01.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e01.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e02.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e02.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e03.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e03.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e04.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e04.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e05.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e05.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e06.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e06.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e07.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e07.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e08.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e08.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e09.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e09.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e10.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e10.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 01\twd.s1e01.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 01\twd.s1e01.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e01.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e01.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e02.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e02.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e03.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e03.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e04.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e04.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e05.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e05.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e06.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e06.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e07.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e07.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e08.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e08.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e09.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e09.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="TestResources\The Walking Dead\Season 02\twd.s2e10.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
+    <None Update="TestResources\The Walking Dead (2010)\Season 02\twd.s2e10.GERMAN.5.1.UNTOUCHED.DUBBED.DL.AC3.1080p.WEB-DL.h264-TvR.mkv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
